--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "autoprefixer": "^10.3.1",
     "chai": "^4.2.0",
     "chromedriver": "^92.0.0",
     "eslint": "^7.20.0",
@@ -41,7 +42,9 @@
     "eslint-plugin-vue": "^7.2.0",
     "geckodriver": "^2.0.1",
     "lint-staged": "^10.5.4",
+    "postcss": "^8.3.6",
     "prettier": "^2.2.1",
+    "tailwindcss": "^2.2.7",
     "ts-node": "^9.1.1",
     "typescript": "~4.1.5",
     "wdio-chromedriver-service": "^7.0.0",
