--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^3.0.4",
+    "vue-code-highlight": "^0.7.8",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
