--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^3.0.4",
