🔧 Changing layout name from default to dashboard

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,7 @@
       "expect-webdriverio",
       "webdriverio/sync",
       "mocha",
-      "chai",
-
-      "types.d.ts"
+      "chai"
     ],
     "paths": {
       "@/*": [
