--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "@tailwindcss/line-clamp": "^0.2.1",
-    "core-js": "^3.8.3",
+    "core-js": "^3.17.1",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.0.4",
+    "vue": "^3.2.7",
     "vue-code-highlight": "^0.7.8",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
-    "@types/mocha": "^8.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@types/mocha": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "@vue/cli-plugin-babel": "~5.0.0-beta.3",
     "@vue/cli-plugin-e2e-webdriverio": "~5.0.0-beta.3",
     "@vue/cli-plugin-eslint": "~5.0.0-beta.3",
@@ -37,25 +37,25 @@
     "@vue/cli-plugin-unit-mocha": "~5.0.0-beta.3",
     "@vue/cli-plugin-vuex": "~5.0.0-beta.3",
     "@vue/cli-service": "~5.0.0-beta.3",
-    "@vue/compiler-sfc": "^3.0.4",
+    "@vue/compiler-sfc": "^3.2.7",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
-    "autoprefixer": "^10.3.1",
+    "autoprefixer": "^10.3.3",
     "chai": "^4.2.0",
-    "chromedriver": "^92.0.0",
+    "chromedriver": "^92.0.2",
     "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.2.0",
-    "geckodriver": "^2.0.1",
-    "lint-staged": "^10.5.4",
+    "eslint-plugin-vue": "^7.17.0",
+    "geckodriver": "^2.0.4",
+    "lint-staged": "^11.1.2",
     "postcss": "^8.3.6",
     "prettier": "^2.2.1",
-    "tailwindcss": "^2.2.7",
-    "ts-node": "^9.1.1",
-    "typescript": "~4.1.5",
+    "tailwindcss": "^2.2.9",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2",
     "wdio-chromedriver-service": "^7.0.0",
-    "wdio-geckodriver-service": "^2.0.2"
+    "wdio-geckodriver-service": "^2.0.3"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
