👓 New card layout, with auth sample, and usePasswordScore hook

--- a/src/sample/tableConfig.json
+++ b/src/sample/tableConfig.json
@@ -22,6 +22,11 @@
             "filterable": true
         },
         {
+            "name": "key",
+            "label": "Key",
+            "field": "key"
+        },
+        {
             "name": "action",
             "label": "Action",
             "width": "100px"
